fix(nav): hidden overflow nvaItem when container change size

--- a/src/nav/styles/nav.scss
+++ b/src/nav/styles/nav.scss
@@ -153,6 +153,7 @@
         border-left: variables.$nav-vertical-border-left-empty;
         // set border width as 0
         border-bottom-width: 0px;
+        white-space: nowrap;
         &.active,
         &:hover,
         &:focus,
@@ -199,4 +200,5 @@
 .thy-nav-more-container {
     flex: 1 !important;
     flex-grow: 0 !important;
+    white-space: nowrap;
 }
